--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,10 @@
 {
     "version": 2,
-    "name": "I Solution Traders",
-    "builds": [
-        {
-            "src": "server.js",
-            "use": "@vercel/node"
-        }
+    "name":"e-shop-tutorial",
+    "builds":[
+        {"src":"server.js","use":"@vercel/node"}
     ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/server.js"
-        }
+    "routes":[
+        {"src":"/(.*)","dest":"/server.js"}
     ]
 }
