--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-shop-tutorial",
+  "name": "i-solution-traders",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
