--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,6 @@
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
@@ -57,6 +56,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.2.7"
   }
 }
